--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -14,6 +14,6 @@
 </form>
 
 <p>Nie masz konta? <a th:href="@{/ui/auth/register}">Rejestracja</a></p>
-<p><a th:href="@{/ui/routes}">Powrót do tras</a></p>
+<p><a th:href="@{/ui/routes}">Wyświetl dostępne trasy jako gość</a></p>
 </body>
 </html>
